@@ -48,6 +48,7 @@ def parse_args(args):
     parser.add_authfile()
     parser.add_quiet()
     parser.add_debug()
+    parser.add_ssl()
     parser.add_version()
     parser.add_storage_url()
     parser.add_argument('file', metavar='<file>', type=argparse.FileType(mode='rb'),
