@@ -65,6 +65,7 @@ def parse_args(args):
     parser.add_quiet()
     parser.add_log()
     parser.add_authfile()
+    parser.add_ssl()
     parser.add_cachedir()
     parser.add_version()
 
