@@ -41,15 +41,16 @@ class Bucket(AbstractBucket):
     The bucket guarantees only immediate get after create consistency.
     """
 
-    def __init__(self, storage_url, login, password):
+    def __init__(self, storage_url, login, password, use_ssl):
         super(Bucket, self).__init__()
 
-        (host, port, bucket_name, prefix) = self._parse_storage_url(storage_url)
+        (host, port, bucket_name, prefix) = self._parse_storage_url(storage_url, use_ssl)
 
         self.bucket_name = bucket_name
         self.prefix = prefix
         self.hostname = host
         self.port = port
+        self.use_ssl = use_ssl
         self.conn = self._get_conn()
 
         self.password = password
@@ -57,7 +58,7 @@ class Bucket(AbstractBucket):
         self.namespace = 'http://s3.amazonaws.com/doc/2006-03-01/'
 
     @staticmethod
-    def _parse_storage_url(storage_url):
+    def _parse_storage_url(storage_url, use_ssl):
         '''Extract information from storage URL
         
         Return a tuple * (host, port, bucket_name, prefix) * .
@@ -73,7 +74,12 @@ class Bucket(AbstractBucket):
             raise QuietError('Invalid storage URL')
 
         hostname = hit.group(1)
-        port = int(hit.group(2) or '80')
+        if hit.group(2):
+            port = int(hit.group(2))
+        elif use_ssl:
+            port = 443
+        else:
+            port = 80
         bucketname = hit.group(3)
         prefix = hit.group(4) or ''
 
@@ -82,7 +88,7 @@ class Bucket(AbstractBucket):
     def _get_conn(self):
         '''Return connection to server'''
         
-        return http_connection(self.hostname, self.port, ssl=False)
+        return http_connection(self.hostname, self.port, self.use_ssl)
 
     def is_temp_failure(self, exc): #IGNORE:W0613
         '''Return true if exc indicates a temporary error
