@@ -1034,6 +1034,7 @@ def parse_args(args):
     parser.add_authfile()
     parser.add_debug_modules()
     parser.add_quiet()
+    parser.add_ssl()
     parser.add_version()
     parser.add_storage_url()
 
